<resources>
    <string name="app_name">Doodleblue</string>
    <string name="inka_restaurant">Inka Restaurant</string>
    <string name="all_days_09_00_am_11pm">All days :09:00 AM - 11PM</string>
    <string name="reach_us_at_9876543210">Reach us at : 9876543210</string>
    <string name="book_a_table">BOOK A TABLE</string>
    <string name="punjabi">Punjabi Dishes</string>
    <string name="paneer_butter_masala">Paneer Butter Masala</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="paneer_butter_masala_price">150</string>
    <string name="paneer_tikka">Paneer Tikka</string>
    <string name="paneer_tikka_price">180</string>
    <string name="paneer_handi">Paneer Handi</string>
    <string name="paneer_handi_price">220</string>
    <string name="view_cart">VIEW CART</string>
    <string name="add">Add</string>
    <string name="total_cost">Total Cost</string>
    <string name="review_orders">Review Orders</string>
    <string name="show_more"><u>Show more</u></string>
    <string name="indian_rupee_symbol">Indian Rupee Symbol</string>
    <string name="cart_of_image">Cart of Image</string>
    <string name="place_order">PLACE ORDER</string>
</resources>
